--- a/client/src/components/trackInfo/trackInfo.css
+++ b/client/src/components/trackInfo/trackInfo.css
@@ -104,6 +104,10 @@
     -webkit-transform: scale(1);
             transform: scale(1);
   }
+  75% {
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
+  }
   100% {
     -webkit-transform: translateY(-200px);
             transform: translateY(-200px);
@@ -122,6 +126,10 @@
   50% {
     -webkit-transform: scale(1);
             transform: scale(1);
+  }
+  75% {
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
   }
   100% {
     -webkit-transform: translateY(-200px);
