--- a/client/src/components/trackInfo/trackInfo.scss
+++ b/client/src/components/trackInfo/trackInfo.scss
@@ -64,6 +64,9 @@
     50% {
         transform: scale(1);
     }
+    75% {
+        transform: translateY(-200px);
+    }
     100% {
         transform: translateY(-200px);
     }
