--- a/client/src/components/trackInfo/trackInfoSpecific/trackInfoSpecific.css
+++ b/client/src/components/trackInfo/trackInfoSpecific/trackInfoSpecific.css
@@ -132,13 +132,13 @@
   background: rgba(79, 219, 135, 0.4);
 }
 
-@media all and (max-width: 1350px) {
+@media all and (max-width: 1415px) {
   .analysisChart {
     left: 250px;
   }
 }
 
-@media all and (max-width: 1275px) {
+@media all and (max-width: 1350px) {
   .analysisChart {
     left: 200px;
     -webkit-transform: scale(0.9);
@@ -146,7 +146,7 @@
   }
 }
 
-@media all and (max-width: 1175px) {
+@media all and (max-width: 1250px) {
   .analysisChart {
     left: 175px;
     -webkit-transform: scale(0.8);
@@ -154,7 +154,7 @@
   }
 }
 
-@media all and (max-width: 1075px) {
+@media all and (max-width: 1150px) {
   .analysisChart {
     left: 150px;
     -webkit-transform: scale(0.7);
@@ -162,7 +162,7 @@
   }
 }
 
-@media all and (max-width: 975px) {
+@media all and (max-width: 1050px) {
   .analysisChart {
     left: 125px;
     -webkit-transform: scale(0.6);
@@ -170,11 +170,19 @@
   }
 }
 
-@media all and (max-width: 850px) {
+@media all and (max-width: 915px) {
   .analysisChart {
     left: 125px;
     -webkit-transform: scale(0.5);
             transform: scale(0.5);
+  }
+}
+
+@media all and (max-width: 875px) {
+  .analysisChart {
+    left: 110px;
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
   }
 }
 
@@ -196,6 +204,10 @@
     margin-left: 0px;
     -webkit-transform: scale(0.4);
             transform: scale(0.4);
+    width: 20%;
+  }
+  .analysisChart .cluster p {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=trackInfoSpecific.css.map */
