made changes for mobile! :)

--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -118,4 +118,9 @@
         left: 0;
         width: 100vw;
     }
+    .logout {
+        transform: scale(.75);
+        margin-left: 0%;
+        justify-content: center;
+    }
 }
