--- a/client/src/components/profile/profile.css
+++ b/client/src/components/profile/profile.css
@@ -159,5 +159,13 @@
     left: 0;
     width: 100vw;
   }
+  .logout {
+    -webkit-transform: scale(0.75);
+            transform: scale(0.75);
+    margin-left: 0%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=profile.css.map */
