updated navbar and profile :)

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,3 +1,7 @@
+.navbar--hidden {
+  display: block;
+}
+
 .navbar {
   position: fixed;
   left: 0;
@@ -74,6 +78,9 @@
 }
 
 @media all and (max-width: 740px) {
+  .navbar--hidden {
+    display: none;
+  }
   .navbar {
     position: fixed;
     top: 90%;
