--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -11,53 +11,52 @@
     width: calc(100vw - 220px);
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,.4) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
     background-blend-mode: multiply,multiply;
-}
 
-.image-name{
-    position: relative;
-    display: flex;
-    margin-top: 50px;
-    align-items: center;
-    .image {
-        height: 200px;
-        fill: white;
-    }
-    .name {
-        color: white;
-        font-family: 'Arial';
-        h1 {
-            font-size: 90px;
+    .image-name{
+        position: relative;
+        display: flex;
+        align-items: center;
+        .image {
+            height: 200px;
+            fill: white;
         }
-        p {
-            color: rgb(30,215,96);
+        .name {
+            color: white;
+            font-family: 'Arial';
+            h1 {
+                font-size: 90px;
+            }
+            p {
+                color: rgb(30,215,96);
+            }
         }
     }
-}
-
-.logout {
-    position: relative;
-    margin-top: 25px;
-    display: flex;
-    align-items: center;
-    margin-left: 4%;
-    a {
-        text-decoration: none;
-        color: white;
-        border-style: solid;
-        border-radius: 20px;
-        padding: 10px 20px;
-        margin-left: 1%;
-        font-family: 'Arial';
-        font-weight: bold;
-    }
-}
-
-.info{
-    display: flex;
-    h3 {
-        margin: 0px 5px;
+    
+    .logout {
+        position: absolute;
+        bottom: 5%;
+        display: flex;
+        align-items: center;
+        margin-left: 4%;
+        .info{
+            display: flex;
+            h3 {
+                margin: 0px 5px;
+            }
+        }
+        a {
+            text-decoration: none;
+            color: white;
+            border-style: solid;
+            border-radius: 20px;
+            padding: 10px 20px;
+            margin-left: 1%;
+            font-family: 'Arial';
+            font-weight: bold;
+        }
     }
 }
 
@@ -114,13 +113,18 @@
 }
 
 @media all and (max-width: 740px) {
-    .profile, .bottomHalf {
+    .profile {
         left: 0;
         width: 100vw;
+        .logout {
+            transform: scale(.75);
+            margin-left: 0%;
+            justify-content: center;
+            align-items: center;
+        }
     }
-    .logout {
-        transform: scale(.75);
-        margin-left: 0%;
-        justify-content: center;
+    .bottomHalf {
+        left: 0;
+        width: 100vw;
     }
 }
